# qd-varallax

./: .gitignore  Cargo.toml
qd-varallax/: Cargo.toml
qd-varallax/src/: abstractions.rs  core.rs  main.rs  painter.rs  types.rs  widgets.rs
qd-varallax/src/abstractions/: abstract_layouts.rs  abstract_widgets.rs  abstract_windows.rs  window_function.rs
qd-varallax/src/assets/: pre_load.txt
qd-varallax/src/core/: application.rs  bvh.rs  glyph.rs  gpu_resource.rs  msdf.rs  renderer.rs  resource.rs  scene.rs  signal.rs  systems.rs  tex_registry.rs  vx_event.rs
qd-varallax/src/core/shader/: sdf_shader.wgsl  text_shader.wgsl  texture_shader.wgsl  vertex_shader.wgsl
qd-varallax/src/develop_examples/: main_window.rs
qd-varallax/src/painter/: painter.rs  tessellate.rs
qd-varallax/src/types/: color.rs  genelational_vector.rs  geometry.rs  texture.rs  transform.rs  vertex.rs
qd-varallax/src/utils/: convert.rs
qd-varallax/src/widgets/: button.rs  text.rs  theme.rs  vx_file_dialog.rs  vx_message_box.rs  vx_widgets.rs
vx_macro/: Cargo.toml
vx_macro/src/: lib.rs
