[package]
name = "qd-varallax"
version = "0.1.0"
edition = "2024"

[dependencies]
vx_macro ={ path = "../vx_macro" }
winit = "0.30"
wgpu = "28.0"
pollster = "0.4"
bytemuck = { version = "1.25.0", features = ["derive"] }
derive_more ={ version = "2.1.1", features = ["full"] }
image = "0.25.10"
rfd = "0.17.2"
swash = "0.2.7"
fdsm = "0.8.0"
nalgebra = "0.34.2"
parry2d = "0.26.0"